testsuite/tests/typecheck/should_fail/T17594d.stderr

T17594d.hs:4:1: error: Parse error in pattern: thing
